--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 selenium>=4.15.0
+chromedriver-autoinstaller>=0.6.2
 webdriver-manager>=4.0.0
 dearpygui>=1.10.0
+pandas>=2.0.0
+pyyaml>=6.0
+urllib3>=2.0.0
 nuitka>=1.8.0
-requests
