--- a/.github/workflows/build-fedora.yml
+++ b/.github/workflows/build-fedora.yml
@@ -32,15 +32,16 @@ jobs:
         # Build with Nuitka
         nuitka --standalone --onefile --enable-plugin=no-qt --output-dir=dist src/main.py
         
-        # Create tar.gz for easy download
+        # Rename binary and create tar.gz
+        mv dist/main.bin dist/mcat
         cd dist
-        tar -czf ../WebScraper-Fedora.tar.gz .
+        tar -czf ../mcat.tar.gz mcat
         cd ..
     
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: WebScraper-Fedora
+        name: mcat-Fedora
         path: |
-          dist/
-          WebScraper-Fedora.tar.gz
+          dist/mcat
+          mcat.tar.gz
