--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Build with Nuitka
       run: |
         # Build with Nuitka
-        nuitka --standalone --onefile --enable-plugin=no-qt --output-dir=dist src/main.py
+        nuitka --standalone --onefile --enable-plugin=no-qt --include-data-dir=assets/fonts=assets/fonts --output-dir=dist src/main.py
         
         # Rename binary and create zip with just the binary
         mv dist/main.bin mcat.bin
