--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -30,14 +30,11 @@ jobs:
         # Build with Nuitka
         nuitka --standalone --onefile --enable-plugin=no-qt --include-data-dir=assets/fonts=assets/fonts --output-dir=dist src/main.py
         
-        # Rename binary and create zip with just the binary
+        # Rename binary
         mv dist/main.bin mcat.bin
-        zip mcat.zip mcat.bin
     
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
         name: mcat-macOS
-        path: |
-          dist/mcat.bin
-          mcat.zip
+        path: mcat.bin
